More converting to Siteleaf v2

--- a/_includes/projects-detail.html
+++ b/_includes/projects-detail.html
@@ -3,10 +3,10 @@
 	<article class="container">
 		{{ content }}
 	</article>
-	{% if page['video_link'] %}
+	{% if page.video_link %}
 	<article class="video">
 		<div class="video-wrap">
-			{{ page['video_link'] }}
+			{{ page.video_link }}
 		</div>
 	</article>
 	{% endif %}
