--- a/_includes/recent-projects.html
+++ b/_includes/recent-projects.html
@@ -1,19 +1,17 @@
 <div class="container">
   <section class="recent-section row project-grid">
     <h2>Recent Projects</h2>
-    {% assign projects_posts = site.pages['projects'].posts %}
-    {% for post in projects_posts | post limit:2 %}
-
+    {% for page in site.projects | post limit:2 %}
       <article class="projects post-module six columns collapse">
         <div class="post-thumb">
-          <img src="{{ post.meta['recent_thumbnail'] }}" class="u-full-width">
+          <img src="{{ page.recent_thumbnail }}" class="u-full-width">
         </div>
         <div class="overlay">
           <div class="view-wrap">
             <div class="project-header" style="display:block;">
-              <h3>{{ post.title }}</h3>
+              <h3>{{ page.title }}</h3>
             </div>
-            <a href="{{ post.url }}" class="view button">View project &raquo;</a>
+            <a href="{{ page.url }}" class="view button">View project &raquo;</a>
           </div>
         </div>
       </article>
