--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -9,7 +9,7 @@
       timeout: 70
    }).cycle("pause");
 
-  // Pause & play on hover
+  // Pause & play on hover of homepage images //
   $('.slideshow-block').hover(function(){
     $(this).find('.slides').addClass('active').cycle('resume');
   }, function(){
