--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,26 +1,26 @@
 @font-face {
   font-family: UnitRoundedWeb-Light;
-  src: url("http://localhost:9292/fonts/UnitRoundedWeb-Light.woff") format("woff");
+  src: url("http://127.0.0.1:4000/fonts/UnitRoundedWeb-Light.woff") format("woff");
   font-weight: light;
   font-style: normal; }
 @font-face {
   font-family: UnitRoundedWeb-LightItalic;
-  src: url("/fonts/UnitRoundedWeb-LightItalic.woff") format("woff");
+  src: url("http://127.0.0.1:4000/fonts/UnitRoundedWeb-LightItalic.woff") format("woff");
   font-weight: light;
   font-style: italic; }
 @font-face {
   font-family: UnitRoundedWeb;
-  src: url("http://localhost:9292/fonts/UnitRoundedWeb.woff") format("woff");
+  src: url("http://127.0.0.1:4000/fonts/UnitRoundedWeb.woff") format("woff");
   font-weight: normal;
   font-style: normal; }
 @font-face {
   font-family: UnitRoundedWeb-Italic;
-  src: url("/fonts/UnitRoundedWeb-Italic.woff") format("woff");
+  src: url("http://127.0.0.1:4000/fonts/UnitRoundedWeb-Italic.woff") format("woff");
   font-weight: normal;
   font-style: italic; }
 @font-face {
   font-family: UnitRoundedWeb-Medium;
-  src: url("http://localhost:9292/fonts/UnitRoundedWeb-Medium.woff") format("woff");
+  src: url("http://127.0.0.1:4000/fonts/UnitRoundedWeb-Medium.woff") format("woff");
   font-weight: medium;
   font-style: normal; }
 
