--- a/_includes/recent-news.html
+++ b/_includes/recent-news.html
@@ -1,17 +1,16 @@
 <section class="news-section">
   <div class="container">
     <h2>News</h2>
-
     <div class="row">
-      {% assign news_posts = site.pages['news'].posts %}
-      {% for post in news_posts | post limit:4 %}
+      {% assign sorted = (site.news | sort: 'date') | reverse %}
+      {% for page in sorted | post limit:4 %}
       <article class="recent-news four columns post-module">
-        <a href="{{post.url}}" class="u-full-width">
-          <div class="post-thumb" style="background-image: url('{{ project_thumbnail }}');"></div>
+        <a href="{{ page.url }}" class="u-full-width">
+          <div class="post-thumb" style="background-image: url('{{ page.thumbnail }}');"></div>
         </a>
         <div class="post-copy">
-          <h3><a href="{{post.url}}">{{post.title}}</a></h3>
-          {{post.excerpt}}
+          <h3><a href="{{ page.url }}">{{ page.title }}</a></h3>
+          {{ page.excerpt }}
         </div>
       </article>
       {% endfor %}
