--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,12 +16,15 @@
 						<a href="/"><img src="/images/mu-logo.svg" class="logo"></a>
 					</div>
 					<ul class="navbar-list">
-						{% for page in site.pages %}
-						{% if page.main_nav == 'true' %}
-						<li>
-							<a href="{{ page.url }}"{% if page.url == url %} class="selected"{% endif %}>{{ page.title }}</a>
-						</li>
-						{% endif %}
+						{% assign navigation_pages = site.html_pages | sort: 'navigation_weight' %}
+						{% for p in navigation_pages %}
+							{% if p.navigation_weight %}
+								<li>
+									<a href="{{ p.url }}" {% if p.url == page.url %}class="selected"{% endif %}>
+										{{ p.title }}
+									</a>
+								</li>
+							{% endif %}
 						{% endfor %}
 					</ul>
 				</div>
