--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -980,7 +980,7 @@ footer {
   width: 200px;
   height: 235px;
   overflow: hidden;
-  background-image: url('/assets/0.png');
+  background-image: url('/uploads/0.png');
   background-size: 200px;
   background-repeat: no-repeat;
   background-position: 0 0;
