More v2 conversion edits

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,7 +28,7 @@
 		<!-- Big Image -->
 		<div class="header-home">
 			<!-- Header / Navigation -->
-			<header class="bg-{{page.color | fallback: 'dark_blue'}}">
+			<header class="bg-{{page.color | fallback: 'site.dark_blue'}}">
 				<nav class="container">
 					<div class="row">
 						<div class="logo-section">
