--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<!-- Header / Navigation -->
-		<header class="bg-{{page['color'] | fallback: 'dark_blue'}}">
+		<header class="bg-{{page.color | fallback: 'site.dark_blue'}}">
 			<nav class="container">
 				<div class="row">
 					<div class="logo-section">
