--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -2,27 +2,24 @@
 layout: default
 ---
 
-<section class="parent container">
-  {% if parent %}
-    <h1>{{parent.title}}: {{title}}</h1>
-  {% else %}
-    <h1>{{title}}</h1>
-  {% endif %}
-  {% for post in taxonomy['tags']['featured'].posts limit:1 %}
-    {% assign featured_ids = featured_ids | append:',' | append:post.id %}
-    <article class="row">
-    	<div class="twelve columns post-feature-container" style="background-image: url('{{ page.featured-thumbnail }}');">
-    		<div class="post-feature-info">
-    			<h3><a href="{{ page.url }}">{{ page.title }}</a></h3>
-    			{{ page.excerpt }}
-    			<a href="{{ page.url }}">View project &raquo;</a>
-    		</div>
-    	</div>
-    </article>
-  {% endfor %}
-  <div class="row">
-    {% for post in posts %}
-      {% unless featured_ids contains post.id %}
+  <section class="parent container">
+    <h1>{{ page.title }}</h1>
+    <!-- Feature Story -->
+    {% for page in site.news limit:1 %}
+    {% if page.featured == 'true' %}
+      <article class="row">
+      	<div class="twelve columns post-feature-container" style="background-image: url('{{ page.featured-thumbnail }}');">
+      		<div class="post-feature-info">
+      			<h3><a href="{{ page.url }}">{{ page.title }}</a></h3>
+      			{{ page.excerpt }}
+      			<a href="{{ page.url }}">View project &raquo;</a>
+      		</div>
+      	</div>
+      </article>
+    {% endif %}
+    {% endfor %}
+    <div class="row">
+      {% for page in site.news reversed %}
         <article class="news post-module four columns">
           <a href="{{ page.url }}" class="u-full-width">
             <div class="post-thumb" style="background-image: url('{{ page.thumbnail }}');"></div>
@@ -33,10 +30,9 @@ layout: default
             <a href="{{ page.url }}">View post &raquo;</a>
           </div>
         </article>
-      {% endunless %}
-    {% endfor %}
-  </div>
-</section>
-{% if parent %}
-  <p><a href="{{ parent.url }}">&larr; Back to {{ parent.title }}</a></p>
-{% endif %}
+      {% endfor %}
+    </div>
+  </section>
+  {% if parent %}
+    <p><a href="{{ parent.url }}">&larr; Back to {{ parent.title }}</a></p>
+  {% endif %}
