Edits to news layout pages

--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -25,7 +25,7 @@ layout: default
             <div class="post-thumb" style="background-image: url('{{ page.thumbnail }}');"></div>
           </a>
           <div class="post-copy">
-            <h3><a href="{{ post.url }}">{{ page.title }}</a></h3>
+            <h3><a href="{{ page.url }}">{{ page.title }}</a></h3>
             {{ page.excerpt | strip html }}
             <a href="{{ page.url }}">View post &raquo;</a>
           </div>
