--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -5,7 +5,8 @@ layout: default
 	<section class="parent container">
 		<h1>{{ page.title }}</h1>
 		<!-- Feature Post -->
-		{% for page in site.projects limit: 1 %}
+		{% assign featured_project = (site.projects | where: 'featured', 'true') %}
+		{% for page in featured_project limit: 1 %}
 			<article class="row">
 				<div class="twelve columns post-feature-container" style="background-image: url('{{ page.featured_thumbnail }}');">
 					<div class="post-feature-info">
@@ -18,7 +19,8 @@ layout: default
 		{% endfor %}
 		<!-- Past Posts -->
 		<section class="row project-grid">
-			{% for page in site.projects reversed %}
+			{% assign projects = (site.projects | where: 'featured', '') %}
+			{% for page in projects reversed %}
 				<article class="projects post-module">
 					<div class="post-thumb">
 						<img src="{{ page.project_thumbnail }}" alt="{{ asset.meta['name'] }}" class="u-full-width">
