--- a/_layouts/news-page.html
+++ b/_layouts/news-page.html
@@ -35,10 +35,8 @@
 			<section>
 			  <article class="row">
 			    <div class="header-news container" style="height: 10em;">
-						{% for image in page.images %}{% if image.header-type == 'news' %}
-			      <div class="header-image" style="background-image: url({{image.path}});">
+			      <div {% for image in page.images %}{% if image.header-type == 'news' %} class="header-image" style="background-image: url({{ image.path }});" {% endfor %}>
 			      </div>
-						{% endfor %}
 			      <h3>{{ page.date | date: '%B %d, %Y' }}</h3>
 			      <h1>{{ page.title }}</h1>
 			    </div>
