--- a/_layouts/news-page.html
+++ b/_layouts/news-page.html
@@ -33,24 +33,15 @@
 		<!-- Main Content -->
 		<div class="main-content">
 			<section>
-				<!--
-			  <article class="row">
-			    <div class="header-news container" style="height: 10em;">
-			      <div {% for image in page.images %}{% if image.header-type == 'news' %} class="header-image" style="background-image: url({{ image.path }});" {% endfor %}>
-			      </div>
-			      <h3>{{ page.date | date: '%B %d, %Y' }}</h3>
-			      <h1>{{ page.title }}</h1>
-			    </div>
-			  </article>
-				-->
+				
+				<h3>{{ page.date | date: '%B %d, %Y' }}</h3>
+				<h1>{{ page.title }}</h1>
 				<article class="row container">
 					{{ content }}
 				</article>
-			  <article class="news-hero-images">
+			  <article class="header-news container">
 			    {% for image in page.images %}{% if image.header-type == 'news' %}
-			      <div class="container">
-			        <img src="{{ image.path }}">
-			      </div>
+			      <img src="{{ image.path }}">
 			    {% endif %}{% endfor %}
 			  </article>
 			  <div class="container">
