Add updated files

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>{{ site.title - page.title }}</title>
+		<title>{{ site.title }}</title>
 		<link href="/styles/fonts.css" rel="stylesheet" type="text/css" media="all">
 		<link href="/styles/styles.css" rel="stylesheet" type="text/css" media="all">
 	</head>
