--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -5,7 +5,7 @@ layout: default
   <section class="parent container">
     <h1>{{ page.title }}</h1>
     <!-- Feature Story -->
-    {% assign featured_news = (site.news | where: 'featured', 'true') %}
+    {% assign featured_news = site.news | where: 'featured', 'true' %}
 		{% for page in featured_news limit: 1 %}
       <article class="row">
       	<div class="twelve columns post-feature-container" style="background-image: url('{{ page.featured-thumbnail }}');">
@@ -18,7 +18,7 @@ layout: default
       </article>
     {% endfor %}
     <div class="row">
-      {% assign news = (site.news | where: 'featured', '') %}
+      {% assign news = site.news | where: 'featured', '' %}
       {% for page in news reversed %}
         <article class="news post-module four columns">
           <a href="{{ page.url }}" class="u-full-width">
@@ -26,7 +26,7 @@ layout: default
           </a>
           <div class="post-copy">
             <h3><a href="{{ page.url }}">{{ page.title }}</a></h3>
-            {{ page.excerpt | strip html }}
+            {{ page.excerpt | strip_html }}
             <a href="{{ page.url }}">View post &raquo;</a>
           </div>
         </article>
