--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -5,7 +5,7 @@ layout: default
 	<section class="parent container">
 		<h1>{{ page.title }}</h1>
 		<!-- Feature Post -->
-		{% assign featured_project = (site.projects | where: 'featured', 'true') %}
+		{% assign featured_project = site.projects | where: 'featured', 'true' %}
 		{% for page in featured_project limit: 1 %}
 			<article class="row">
 				<div class="twelve columns post-feature-container" style="background-image: url('{{ page.featured_thumbnail }}');">
@@ -19,7 +19,7 @@ layout: default
 		{% endfor %}
 		<!-- Past Posts -->
 		<section class="row project-grid">
-			{% assign projects = (site.projects | where: 'featured', '') %}
+			{% assign projects = site.projects | where: 'featured', '' %}
 			{% for page in projects reversed %}
 				<article class="projects post-module">
 					<div class="post-thumb">
