Update theme files

--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -1,6 +1,6 @@
 <section class="call-to-action">
   <div class="row">
-    <div class="twelve columns container">
+    <div class="twelve columns">
       <h1>Interested in starting a project? Let’s talk.</h1>
       <form>
         <div class="row">
