--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
   <div class="container">
-    <p>&copy; {{ site.date | date: '%Y' }} Mad-Universe. LLC. All rights reserved | <a href="mailto:info@mad-universe.com">info@mad-universe.com</a></p>
+    <p>&copy; {{ site.date | date: '%Y' }} Mad-Universe. LLC. All rights reserved | <a href="mailto:{{ site.chris_email }}">{{ site.chris_email }}</a></p>
   </div>
 </footer>
