--- a/_layouts/project-page.html
+++ b/_layouts/project-page.html
@@ -6,7 +6,7 @@
 		<title>{{ site.title }}</title>
 		<link href="/styles/fonts.css" rel="stylesheet" type="text/css" media="all">
 		<link href="/styles/styles.css" rel="stylesheet" type="text/css" media="all">
-		<style>
+		<!--<style>
 			{% for image in page.images %}{% if image.type == 'medium' %}
 	    .header-projects { background-image: url({{image.path}}); }
 			{% endif %}{% endfor %}
@@ -21,11 +21,11 @@
 	      .header-projects { background-image: url({{image.path}}); }
 			{% endif %}{% endfor %}
 	    }
-	  </style>
+	  </style>-->
 		<script src="/js/picturefill.js" type="text/javascript"></script>
 	</head>
 	<body>
-		<div class="header-projects">
+		<div class="header-projects" style="background-image:url('{{ page.images.large_image }}')">
 			<!-- Header / Navigation -->
 			<header class="bg-{{page['color'] | fallback: 'dark_blue'}}">
 				<nav class="container">
