--- a/_layouts/project-page.html
+++ b/_layouts/project-page.html
@@ -21,11 +21,11 @@
 	      .header-projects { background-image: url({{image.path}}); }
 			{% endif %}{% endfor %}
 	    }
-	  </style>-->
-		<script src="/js/picturefill.js" type="text/javascript"></script>
+	  </style>
+		<script src="/js/picturefill.js" type="text/javascript"></script>-->
 	</head>
 	<body>
-		<div class="header-projects" style="background-image:url('{{ page.images.large_image }}')">
+		<div class="header-projects" style="background-image:url('{{ page.images.large_image }}');">
 			<!-- Header / Navigation -->
 			<header class="bg-{{page['color'] | fallback: 'dark_blue'}}">
 				<nav class="container">
