--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -11,7 +11,7 @@ layout: default
       	<div class="twelve columns post-feature-container" style="background-image: url('{{ page.featured-thumbnail }}');">
       		<div class="post-feature-info">
       			<h3><a href="{{ page.url }}">{{ page.title }}</a></h3>
-      			{{ page.content | strip_html | truncatewords:30 }}
+      			<p>{{ page.content | strip_html | truncatewords:20 }}</p>
       			<a href="{{ page.url }}">View project &raquo;</a>
       		</div>
       	</div>
@@ -26,7 +26,7 @@ layout: default
           </a>
           <div class="post-copy">
             <h3><a href="{{ page.url }}">{{ page.title }}</a></h3>
-            {{ page.content | strip_html | truncatewords:10 }}
+            <p>{{ page.content | strip_html | truncatewords:10 }}</p>
             <a href="{{ page.url }}">View post &raquo;</a>
           </div>
         </article>
