Update footer css

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
   <div class="container">
     <p>&copy; {{ site.date | date: '%Y' }} Mad-Universe. LLC. All rights reserved</p>
-    <a href="mailto:{{ site.chris_email }}">{{ site.chris_email }}</a>
+    <p><a href="mailto:{{ site.chris_email }}">{{ site.chris_email }}</a></p>
   </div>
 </footer>
